app/design/frontend/Shop/hh/web/css/main.less
/* ... */
.subtitle {
  text-align: center;
  text-transform: uppercase;
  font-size: 18px;
  font-family: @baseFont;
  margin-bottom: 35px;
  margin-top: 10px;
}

.quickview-lookbook {
  border: 1px solid #b0b7b8;
  font-size: 15px;
  text-transform: uppercase;
  font-family: @baseFont;
  padding: 10px 30px;
  text-align: center;
  color: #000;
  background-color: rgba(255,255,255,0.8);
  display: block;
  width: 90%;
  position: absolute;
  top: 200px;
  transition: 1s all;
  opacity: 0;
}
.pro-detail-div:hover .quickview-lookbook {
  opacity: 1;
}



/* ==========================================================================
Shot Thumbs
========================================================================== */

.shot-thumb {
  position: relative;
  overflow: hidden;
  background: #000000;
  text-align: center;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
  margin: 10px 0;
  margin-right: 10px;

  h4 {
    position: relative;
    font-family: @dietDidot;
    font-size: 28px;
    margin-top: 35%;

    span {
      background-color: #FFF;
      padding: 0 10px;
    }

    &:before {
      content: '';
      height: 1px;
      width: 80%;
      background: #ababab;
      position: absolute;
      left: 0;
      right: 0;
      margin: 0 auto;
      top: 8px;
      z-index: -1;
    }
  }
  .title {
    text-transform: uppercase;
    font-size: 24px;
    line-height: 28px;
    display: block;
    width: 85%;
    margin: 0 auto;
  }
}
.shot-thumb * {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-transition: all 0.35s ease-in-out;
  transition: all 0.35s ease-in-out;
}
.shot-thumb img {
  max-width: 100%;
  width: 100%;
  vertical-align: top;
}
.shot-thumb .shot-thumb-meta {
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  font-size: 24px;
  color: #000000;
  width: 70%;
  height: 70%;
  background: #ffffff;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
  -webkit-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  transition: all 300ms 0ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
}
.shot-thumb a {
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  cursor: pointer;
}
.shot-thumb:hover img,
.shot-thumb.hover img,
.shot-thumb a:hover img,
.shot-thumb a img:hover {
  opacity: 0.3!important;
  -webkit-filter: grayscale(100%);
  filter: grayscale(100%);
}
.shot-thumb:hover .shot-thumb-meta,
.shot-thumb.hover .shot-thumb-meta {
  -webkit-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  transition: all 300ms 100ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.more-shots, .lookbookslider-index-index .column.main .row.no-gutters {
  margin-right: -10px !important;
}

.lookbookslider-index-index .column.main .row.no-gutters {
  text-align: center;
  .col-md-3 {
    float: none;
    display: inline-block;
    width: 24.5%;
    @media only screen and (max-width: 1024px) {
      width: 49.5%;
    }
    @media only screen and (max-width: 550px) and (min-width: 300px) {
      width: 100%;
    }
  }
}

.more-shots {
  .more-shots-thumbs, .col-md-3 {
    &:nth-of-type(n+5) {
      display: none;
    }
  }
}

.green {
  color: #3c6338;
}


/* ==========================================================================
Shot Slider
========================================================================== */
.hotspot-placeholder,
.mood-bg {
  background: url(../images/mood-bg.jpg) no-repeat left top;
  background-repeat: no-repeat!important;
  background-size: cover!important;
  background-color: #EFEFEF;
  min-height: 500px;
  min-width: 400px;
}
.mood-bg {
  align-items: baseline;
}
.hotspot:hover {
  cursor: pointer;
}

.hotspot i {
  font-size: 19px;
  color: #FFF;
  margin: 0 auto;
  height: 34px;
  width: 34px;
  background: rgba(0,0,0,0.7);
  display: block;
  border-radius: 50%;
  line-height: 32px;
  text-align: center;
  margin-top: 2px;
  border: 2px solid #FFF;
  box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
}

.hotspot {
  width: 39px!important;
  height: 39px!important;
  border-radius: 50%;
}


.cycle-paused:after {
  display: none!important;
}



.cycle-overlay,
#pagernav_ {
  display: none;
}



/* ==========================================================================
Products
========================================================================== */


.pro-detail-div {
  .name {
    display: block;
    margin-bottom: 10px;
  }
  .name a {
    font-family: @fancyFont;
    font-size: 16px;
    font-weight: normal;
    margin-top: 5px;
  }
  img {
    float: none;
    width: 100%;
  }
  .price {
    font-size: 16px;
    color: #8d8d8d;
    font-weight: 700;
    font-family: @headlineFont;
    text-align: center;
    font-weight: normal;
    margin-top: 10px;

    .old-price {
      position: relative;
      display: inline-block;
      font-size: 14px;
    }
  }

}

.current-price {
  .inline;
  .relative;
}
/* ... */

